refactor: 이름 입력 후 플레이어로 파싱